<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/app_dialog_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_logout_btn"
        android:textColor="@color/verde_claro_pixel"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/logout_confirm_msg"
        android:textColor="@color/blanco_claro"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelLogout"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:text="@string/option_cancel_btn"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/verde_claro_pixel"
            android:background="@drawable/btn_secondary_color"
            app:backgroundTint="@null"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAcceptLogout"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:text="@string/option_acept_btn"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/negro_intermedio"
            android:background="@drawable/btn_primary_color"
            app:backgroundTint="@null"/>

    </LinearLayout>

</LinearLayout>