<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_large">

        <!-- LOGO -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:src="@drawable/pixel_root_icono_claro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="Pixel Root Logo" />

        <!-- TITULOS -->
        <TextView
            android:id="@+id/forgotTitle"
            style="@style/AppText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/forgot_password_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImage" />

        <TextView
            android:id="@+id/forgotSubtitle"
            style="@style/AppText.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/forgot_password_subtitle"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle" />

        <!-- CAMPO: EMAIL -->
        <TextView
            android:id="@+id/emailLabel"
            style="@style/AppText.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:text="@string/register_email_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotSubtitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.PixelRootApp.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email_hint"
                android:textColor="@color/blanco_claro"
                android:textColorHint="@color/blanco_intermedio"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size_body"
                android:padding="@dimen/spacing_medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- BOTÓN ENVIAR -->

        <!-- FOOTER: VOLVER -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendCode"
            style="@style/AppButton.Primary"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="28dp"
            android:text="@string/forgot_password_send_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

        <TextView
            android:id="@+id/backToLoginText"
            style="@style/AppText.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/forgot_password_back_to_login"
            android:textColor="@color/verde_claro_pixel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSendCode" />

        <!-- COPYRIGHT -->
        <TextView
            android:id="@+id/copyrightText"
            style="@style/AppText.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/copyright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backToLoginText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
